@@ -1,5 +1,6 @@
 ???? - 4.2.5:
 
+Enhanced logging in the ClassTypeResolver to provide more detailed messaging.
 
 October 12, 2008 - 4.2.4:
 
